--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
         </section>
         <section>
         <h2>Чем мы занимаемся</h2>
-        <img src="./images/img_1.jpg" alt="" width="370">
-        <img src="./images/img_2.jpg" alt="" width="370">
-        <img src="./images/img_3.jpg" alt="" width="370">
+           <ul>
+               <li><img src="./images/img_1.jpg" alt="" width="370"></li> 
+               <li><img src="./images/img_2.jpg" alt="" width="370"></li> 
+               <li><img src="./images/img_3.jpg" alt="" width="370"></li> 
+            </ul>    
         </section>
         <section>
         <h2>Наша команда</h2>
