--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <header>
         <nav>
-            <a href="">
+            <a href="./index.html">
                 <img src="./images/logo.svg" alt="Логотип компании">
             </a>
             <ul>
@@ -85,12 +85,13 @@
         </section>
     </main>  
     <footer>
-        <ul>
-            <li><img src="./images/logo_footer.svg" alt="Логотип компании"></li>                
-            <li><span>г. Киев, пр-т Леси Украинки, 26</span></li>
-            <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>       
+        <img src="./images/logo_footer.svg" alt="Логотип компании">                
+        <address>г. Киев, пр-т Леси Украинки, 26</address>
+        <address>
+            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="tel:+380991111111">+38 099 111 11 11</a>
+        </address>   
+               
     </footer>      
 </body>
 </html>
