--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a href="./index.html">
-                <img src="./images/logo.svg" alt="Логотип компании">
+                WebStudio
             </a>
             <ul>
                 <li><a href="">Студия</a></li>
@@ -63,33 +63,35 @@
             <li>
                 <img src="./images/igor.jpg" alt="Игорь Демьяненко" width="270">
                 <h3>Игорь Демьяненко</h3>
-                <span>Product Designer</span>
+                <p>Product Designer</p>
             </li>
             <li>
                 <img src="./images/olga.jpg" alt="Ольга Репина" width="270">
                 <h3>Ольга Репина</h3>
-                <span>Frontend Developer</span>
+                <p>Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/nikolay.jpg" alt="Николай Тарасов" width="270">
                 <h3>Николай Тарасов</h3>
-                <span>Marketing</span>
+                <p>Marketing</p>
             </li>
             <li>
                 <img src="./images/mihail.jpg" alt="Михаил Ермаков" width="270">
                 <h3>Михаил Ермаков</h3>
-                <span>UI Designer</span>
+                <p>UI Designer</p>
             </li>
         </ul>
 
         </section>
     </main>  
     <footer>
-        <img src="./images/logo_footer.svg" alt="Логотип компании">                
+        <a href="./index.html">WebStudio</a>               
         <address>г. Киев, пр-т Леси Украинки, 26</address>
         <address>
-            <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <ul>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
         </address>   
                
     </footer>      
